Tue Nov 28 00:45:55 2000  George Lebl <jirka@5z.com>

	* applet.c, distribution.c, foobar-widget.c, gnome-run.c,
	  launcher.c, main.c, menu-fentry.[ch], panel-util.[ch],
	  menu-properties.c, menu-rh.c, menu-util.c, menu.c,
	  panel-widget.c, panel.c, session.c, swallow.c:  Check for
	  try execs on menu reread so that we notice newly installed
	  software.  Might have to make this whole checking thing an
	  option for people on slower machines.  Also put in routines
	  stolen from gnome-libs head for checking for programs and file
	  existance as they are faster.

Fri Nov 24 22:24:04 2000  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c: fixup basep to use default
	  handlers instead of signal connection.  Add autoraise to foobar.

Tue Nov 21 21:28:00 2000  George Lebl <jirka@5z.com>

	* gnome-run.c: add support for launching "man:" "info:", "file:"
	  and "ghelp:" URLs directly from the runbox

2000-11-19  Karl Eichwalder  <ke@suse.de>

	* extern.c (extern_before_remove): Adjust message string.
	* swallow.c (before_remove): Fix typo.

Thu Nov 16 21:45:38 2000  George Lebl <jirka@5z.com>

	* applet.c, session.c, swallow.[ch]:  Remove bits of cruft.  Add the
	  applet like reload hack for swallowed thingies.  Also fix a
	  destruction crash by refcounting the swallow structure.

	* panel.c: Accept the nautilus background reset ugly ugly ugly hack

	* session.c: cleanup, remove some cruft, and set the clock format
	  default to use the space padded hour format as that's more correct.

2000-11-15  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* Makefile.am: remove some cruft, yo

	* foobar-widget.c (add_task): add a divider which seperates tasks
	on the current desktop from tasks on other desktops.

	* tasklist_icon.c (tasklist_icon_check_x): pass the window when
	creating the mask

Wed Nov 15 00:13:38 2000  George Lebl <jirka@5z.com>

	* Makefile.am, gwmthumbnail.c:  We don't actually need gwmdesktop