@@ -95,6 +95,7 @@ static GtkWidget *off_panel_popups_cb;
 static GtkWidget *hungry_menus_cb;
 static GtkWidget *use_large_icons_cb;
 static GtkWidget *merge_menus_cb;
+static GtkWidget *menu_check_cb;
 
 typedef struct {
 	int inline_flag;
@@ -736,6 +737,8 @@ sync_menu_page_with_config(GlobalConfig *conf)
 				    conf->use_large_icons);
 	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(merge_menus_cb),
 				    conf->merge_menus);
+	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(menu_check_cb),
+				    conf->menu_check);
 
 	for (opt = menu_options; opt->inline_flag; ++opt) {
 		if (conf->menu_flags & opt->inline_flag)
@@ -762,6 +765,8 @@ sync_config_with_menu_page(GlobalConfig *conf)
 		GTK_TOGGLE_BUTTON(use_large_icons_cb)->active;
 	conf->merge_menus =
 		GTK_TOGGLE_BUTTON(merge_menus_cb)->active;
+	conf->menu_check =
+		GTK_TOGGLE_BUTTON(menu_check_cb)->active;
 	conf->menu_flags = 0;
 	for (opt = menu_options; opt->inline_flag; ++opt) {
 		if (GTK_TOGGLE_BUTTON (opt->inline_rb)->active)
@@ -825,7 +830,8 @@ menu_notebook_page(void)
 	use_large_icons_cb = gtk_check_button_new_with_label (_("Use large icons"));
 	gtk_signal_connect (GTK_OBJECT (use_large_icons_cb), "toggled",
 			    GTK_SIGNAL_FUNC (changed_cb), NULL);
-	gtk_table_attach_defaults(GTK_TABLE(table),use_large_icons_cb, 0,1,0,1);
+	gtk_table_attach_defaults (GTK_TABLE (table), use_large_icons_cb,
+				   0, 1, 0, 1);
 	
 	/* Dot Buttons */
 	show_dot_buttons_cb = gtk_check_button_new_with_label (_("Show [...] buttons"));
@@ -843,7 +849,8 @@ menu_notebook_page(void)
 	hungry_menus_cb = gtk_check_button_new_with_label (_("Keep menus in memory"));
 	gtk_signal_connect (GTK_OBJECT (hungry_menus_cb), "toggled", 
 			    GTK_SIGNAL_FUNC (changed_cb), NULL);
-	gtk_table_attach_defaults(GTK_TABLE(table),hungry_menus_cb, 1,2,1,2);
+	gtk_table_attach_defaults (GTK_TABLE (table), hungry_menus_cb,
+				   1, 2, 1, 2);
 
 	/* Merge system menus */
 	merge_menus_cb = gtk_check_button_new_with_label (_("Merge in system menus"));
@@ -851,6 +858,13 @@ menu_notebook_page(void)
 			    GTK_SIGNAL_FUNC (changed_cb),  NULL);
 	gtk_table_attach_defaults(GTK_TABLE(table), merge_menus_cb,
 				  0, 1, 2, 3);
+
+	/* Menu check */
+	menu_check_cb = gtk_check_button_new_with_label (_("Automatically re-check menus\nfor newly installed software"));
+	gtk_signal_connect (GTK_OBJECT (menu_check_cb), "toggled", 
+			    GTK_SIGNAL_FUNC (changed_cb),  NULL);
+	gtk_table_attach_defaults(GTK_TABLE(table), menu_check_cb,
+				  1, 2, 2, 3);
 
 	/* Menu frame */
 	frame = gtk_frame_new (_("Global menu"));
@@ -1188,6 +1202,9 @@ loadup_vals (void)
 	global_config.merge_menus =
 		gnome_config_get_bool("merge_menus=TRUE");
 
+	global_config.menu_check =
+		gnome_config_get_bool("menu_check=TRUE");
+
 	global_config.off_panel_popups =
 		gnome_config_get_bool("off_panel_popups=TRUE");
 		
@@ -1344,6 +1361,8 @@ write_config (GlobalConfig *conf)
 			      conf->use_large_icons);
 	gnome_config_set_bool("merge_menus",
 			      conf->merge_menus);
+	gnome_config_set_bool("menu_check",
+			      conf->menu_check);
 	gnome_config_set_bool("off_panel_popups",
 			      conf->off_panel_popups);
 	gnome_config_set_bool("disable_animations",
