@@ -1,3 +1,10 @@
+Tue Nov 28 02:19:34 2000  George Lebl <jirka@5z.com>
+
+	* session.c, menu.c, gnome-panel-properties.c, panel_config_global.h,
+	  menu-fentry.c:  Add an option for automatic rereading of menus for
+	  slower machines, and add a menu item for rereading menus if it's
+	  turned off.
+
 Tue Nov 28 00:45:55 2000  George Lebl <jirka@5z.com>
 
 	* applet.c, distribution.c, foobar-widget.c, gnome-run.c,
